元亨祥母婴商城

--- a/plugins/cordova-plugin-geolocation/plugin.xml
+++ b/plugins/cordova-plugin-geolocation/plugin.xml
@@ -73,7 +73,12 @@ xmlns:android="http://schemas.android.com/apk/res/android"
 
     <!-- ios -->
     <platform name="ios">
-
+      <config-file target="*-Info.plist" parent="NSLocationWhenInUseUsageDescription">
+        <string>使用期间定位</string>
+      </config-file>
+      <config-file target="*-Info.plist" parent="NSLocationAlwaysUsageDescription">
+        <string>始终定位</string>
+      </config-file>
         <js-module src="www/Coordinates.js" name="Coordinates">
             <clobbers target="Coordinates" />
         </js-module>
