--- a/plugins/cordova-plugin-geolocation/plugin.xml
+++ b/plugins/cordova-plugin-geolocation/plugin.xml
@@ -77,7 +77,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
         <string>使用期间定位</string>
       </config-file>
       <config-file target="*-Info.plist" parent="NSLocationAlwaysUsageDescription">
-        <string>始终定位</string>
+        <string>需要访问您的位置</string>
       </config-file>
         <js-module src="www/Coordinates.js" name="Coordinates">
             <clobbers target="Coordinates" />
