--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
     "gulp-minify-css": "^0.3.0",
     "gulp-rename": "^1.2.0"
   },
+  "scripts": {
+    "clean": "ionic-app-scripts clean",
+    "build": "ionic-app-scripts build",
+    "lint": "ionic-app-scripts lint",
+    "ionic:build": "ionic-app-scripts build",
+    "ionic:serve": "ionic-app-scripts serve",
+    "ionic cordova build android prod": "ionic cordova build android --prod"
+  },
   "devDependencies": {
     "bower": "^1.8.0",
     "del": "^2.2.2",
