--- a/plugins/cordova-plugin-camera/plugin.xml
+++ b/plugins/cordova-plugin-camera/plugin.xml
@@ -149,12 +149,12 @@
     <framework src="CoreGraphics.framework"/>
     <framework src="AVFoundation.framework"/>
 
-    <preference name="CAMERA_USAGE_DESCRIPTION" default=" "/>
+<!--    <preference name="CAMERA_USAGE_DESCRIPTION" default=" "/>-->
     <config-file target="*-Info.plist" parent="NSCameraUsageDescription">
       <string>调用相机方便用户随时拍照上传</string>
     </config-file>
 
-    <preference name="PHOTOLIBRARY_USAGE_DESCRIPTION" default=" "/>
+<!--    <preference name="PHOTOLIBRARY_USAGE_DESCRIPTION" default=" "/>-->
     <config-file target="*-Info.plist" parent="NSPhotoLibraryUsageDescription">
       <string>调用相册方便用户随时上传图片</string>
     </config-file>
